# vizpunk

./: CMakeLists.txt  LICENSE  README.md  dev_list_1.txt  partitions.csv  sdkconfig
ad9833/: CMakeLists.txt
ad9833/main/: CMakeLists.txt  ad9833.c  word_test.c
docs/: .CS_report.sty  CS_report.sty  CS_report_template.aux  CS_report_template.bbl  CS_report_template.blg  CS_report_template.lof  CS_report_template.lot  CS_report_template.out  CS_report_template.tex  CS_report_template.toc
docs/chapters/: 00_i_abstract.tex  03_methodology.tex
include/: handlers.h  logic_analyzer.hpp
main/: CMakeLists.txt  handlers.c  hello_world_main.c  logic_analyzer.cpp  logic_analyzer_i2s.cpp  main.c
webserver/: CMakeLists.txt  sdkconfig  sdkconfig.old
webserver/main/: CMakeLists.txt  handlers.c  main.c  webserver.c
